# ft_ality

./: .gitignore  Makefile  README.md  ft-ality.cabal
grammars/invalid/: duplicate_combo.gmr  duplicate_key.gmr  invalid_key.gmr  no_actions.gmr  no_combos.gmr  too_many_sections.gmr
grammars/valid/: arrows.gmr  debug.gmr  debugamepad.gmr  mk9.gmr  mk9_baraka.gmr
python/: multiple_dfa.py  one_dfa.py
srcs/: Action.hs  Args.hs  Colors.hs  Combo.hs  DFA.hs  GameControllerManager.hs  Gamepad.hs  Keyboard.hs  Keymap.hs  Main.hs  Parsing.hs  Utils.hs  main.hs
