cabal-version: 3.0
name:          ft-ality
version:       1
author:        amyroshn and axbrisse
maintainer:    amyroshn@student.42.fr and axbrisse@student.42.fr
build-type:    Simple

common warnings
  ghc-options: -Wall

executable ft_ality
  import:           warnings
  main-is:          main.hs
  other-modules:
    Complexity
    Executor
    Machine
    ParsedMachine

  hs-source-dirs:   srcs
  default-language: Haskell2010

  -- TODO: remove unused libraries
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , containers
    , optparse-applicative
    , random
    , random-shuffle
    , text
    , unordered-containers
