cabal-version: 3.0
name:          ft-ality
version:       1
author:        amyroshn and axbrisse
maintainer:    amyroshn@student.42.fr and axbrisse@student.42.fr
build-type:    Simple

common warnings
  ghc-options: -Wall

executable ft_ality
  import:           warnings
  main-is:          main.hs
  other-modules:
    Args
    Colors
    Action
    Combo
    Utils

  hs-source-dirs:   srcs
  default-language: Haskell2010
  build-depends:
    , base
    , optparse-applicative
    , containers
